Thu Jul 12 12:44:15 2001  Arturo Espinosa Aldama  <arturo@ximian.com>

	* report.pl.in (xst_report): Better reporting of errors.

	* platform.pl.in (xst_platform_ensure_supported): Use the
	$tool structure to get the dist.

	* hardware-conf.in: Well, this code is useless, but it had
	some spurious code here I found during a "grande grep".

	* platform.pl.in (xst_platform_ensure_supported): Removed
	explicit STDERR debug output: error reports are now forced
	to STDERR.

	* xml.pl.in (xst_xml_print_request_end): The request end
	string starts with a new line.

2001-07-13  Hans Petter Jansson  <hpj@ximian.com>

	* xml.pl.in (xst_xml_model_get_pcdata): Implement.
	  (xst_xml_model_set_pcdata): Implement.
	  (xst_xml_model_get_attribute): Implement.
	  (xst_xml_model_set_attribute): Implement.

2001-07-13  Hans Petter Jansson  <hpj@ximian.com>

	* xml.pl.in (xst_xml_model_add): Implement.
	  (xst_xml_model_ensure): Implement.
	  (xst_xml_model_remove): Implement.

2001-07-13  Tambet Ingo  <tambet@ximian.com>

	* display-conf.in (check_version): Implement. Check version
	and bail out on versions lower than 4.0.0

	* x.pl.in (x_version): Now it actually works.

2001-07-12  Arturo Espinosa Aldama  <arturo@ximian.com>

	* network.pl.in (xst_network_rh62_interface_activate_by_dev):
	Don't do ifdown on the background. ifdown is fast enough, and
	launching ifup/ifdown almost at the same time doesn't seem like
	a good idea.
	(xst_network_suse70_interface_activate_by_dev): same.
	(xst_network_suse70_ppp_iface_activate): same.
	Print ifup/ifdown debug reports to STDERR to track problems.
	(xst_network_debian_woody_get_auto): Got confused by the double
	negation of "noauto". Fixed (#4538)

	* users-conf.in (xml_parse_users): Ignore files and shells
	tags when parsing, instead of complaining.
	(xml_parse_login_defs): files tag should be ignored here.

	* file.pl.in (xst_file_open_write_from_names): Wrong report
	call.

2001-07-11  Arturo Espinosa Aldama  <arturo@ximian.com>
